fix(ui): hide vertical overflow

--- a/frontend/theme/extras/header.less
+++ b/frontend/theme/extras/header.less
@@ -450,9 +450,12 @@ nav.navigation {
   .mobile-menu-nav {
     align-items: flex-start;
     margin-top: 8.5rem;
+    background-color: @theme-color-blue;
     .ui.container{
-      height: 75%;
+      height: 100%;
       overflow-y: auto;
+      background-color: @theme-color-blue;
+      padding-bottom: 20rem;
       &::-webkit-scrollbar {
         display: none;
       }
