--- a/frontend/theme/extras/main.less
+++ b/frontend/theme/extras/main.less
@@ -1,3 +1,7 @@
+html {
+  overflow-y: hidden;
+}
+
 body {
   font-display: swap;
 }
